--- a/src/Bundle/Resources/config/loaders.yml
+++ b/src/Bundle/Resources/config/loaders.yml
@@ -15,7 +15,7 @@ services:
         class: Hostnet\Component\Webpack\Configuration\Loader\SassLoader
         tags:
             - { name: hostnet_webpack.config_extension }
-    hostnet_webpack.loader.babel:
-        class: Hostnet\Component\Webpack\Configuration\Loader\BabelLoader
-        tags:
-            - { name: hostnet_webpack.config_extension }
+    # hostnet_webpack.loader.babel:
+    #     class: Hostnet\Component\Webpack\Configuration\Loader\BabelLoader
+    #     tags:
+    #         - { name: hostnet_webpack.config_extension }
